[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bellwether"
version = "0.3.0"
description = "Regime-adaptive, ensemble trading signal engine for the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.scripts]
bellwether = "bellwether.cli:main"

[tool.setuptools]
packages = ["bellwether"]

[tool.pytest.ini_options]
testpaths = ["tests"]
